--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,55 @@
 ---
-title: "Super Women: Statisticians and Data Scientists"
+title: "Hi there and welcome!"
 ---
 
-<img src="img/icon.png" class="center75">
+We are a group of Statisticians and Data Scientists! 
 
-Add welcome and introduction text here. 
+'What are those', you say? Well, if you are anything like us, you've got lots of big questions, you like collect information or data about those questions, and you like to find patterns in the data to answer those questions to help make the world better -- like a super hero! 
+
+We would love to tell you a little bit about ourselves both when we were young and who we are now! 
+
+:::{.column-page}
+![](img/women-together.jpeg)
+:::
+
+
+## Educators & Caregivers
+
+### About the book 
+
+This book features a group of statistician and data scientists who identify as a woman. On each page of the book, one woman is featured with the left side of the page describing the individual when she was young and the right side of the page descriving the individual today. 
+
+### Editors and illustrators of the book
+
+The book was edited by Stephanie Hicks and Jessica Crowell and illustrated by Jessica Crowell with an incredible amount of support from the [Super Women Team](about-authors.qmd). 
+
+- Jessica Crowell is a videographer and editor, trained at the Maryland Institute College of Art (MICA), and now in the department of Biostatistics at Johns Hopkins, where she works with faculty to records, edits, illustrates, all the video, audio, and text as part of work in the [Johns Hopkins Data Science Lab](https://jhudatascience.org). 
+
+- [Stephanie Hicks](https://www.stephaniehicks.com/) is a [problem-forward](https://simplystatistics.org/posts/2013-05-29-what-statistics-should-do-about-big-data-problem-forward-not-solution-backward/) scientist who uses statistics and data science tools to solve real-world problems in the biomedical data sciences. She is passionate about working on initiatives that promote justice, equity, diversity, and inclusion. 
+
+### Why this book? 
+
+With this book, we aim to provide a playground of imagination for children to learn about statistics and data science by highlighting the stories of several individuals in these fields. We hope this inspires the next generation to learn more about these fields and how they can be used to help make the world brighter.  
+
+### How do I access the book? 
+
+The book is freely available now to download as a PDF on the [Get the book](about.qmd) page. 
+
+We are in the process of working with the American Statistical Association to self-publish the book on Amazon, in case someone would like a physical copy. Proceeds from this will go towards supporting the [Gertrude M. Cox Scholarship](https://www.amstat.org/your-career/awards/gertrude-m-cox-scholarship).
+
+### License
+
+The illustrations and narrative text in the book are licensed under the [CC-BY-NC-ND](https://creativecommons.org/licenses/by-nc-nd/4.0/) 4.0 license. This means that these specific parts of the book cannot be modified or remixed, if you use our materials.
+
+Everything else in this project is licensed under the [CC-BY-NC-SA](https://creativecommons.org/licenses/by-nc-sa/4.0) 4.0 license. In summary, this means that you can adapt the material to suit your needs as long as you cite the original project and authors.
+
+
+
+### Contact
+
+<p style="margin-left: 40px">
+Stephanie Hicks, PhD<br>
+Associate Professor<br> Department of Biostatistics, [Johns Hopkins Bloomberg School of Public Health](https://publichealth.jhu.edu)<br> Faculty member, [JHU Data Science Lab](https://jhudatascience.org) (DaSL)<br> Co-founder, [R-Ladies Baltimore](https://rladies-baltimore.github.io)<br>
+[stephaniehicks.com](https://www.stephaniehicks.com)
+</p>
+
