--- a/about.qmd
+++ b/about.qmd
@@ -17,13 +17,14 @@ about:
 <br>
 
 
-You can get the book in the following ways: 
+You can get the children's book in the following ways: 
 
 1. Read the story by scrolling through the window below.
 2. Download the PDF from the window below.
 3. We are in the process of working with the American Statistical Association to self-publish the book on Amazon, in case someone would like a physical copy. Proceeds from this will go towards supporting the [Gertrude M. Cox Scholarship](https://www.amstat.org/your-career/awards/gertrude-m-cox-scholarship).
 
 <br>
+
 
 <embed src="img/book-super-women-v2.pdf" type="application/pdf" width="800" height="800">
 
