--- a/about-authors.qmd
+++ b/about-authors.qmd
@@ -5,7 +5,7 @@ editor: visual
 
 <img src="img/team.jpeg" class="center95"/>
 
-This book was created and launched in 2023 by (pictured above left to right)
+This children's book was created and launched in 2023 by (pictured above left to right)
 
 ### Donna LaLonde
 
