--- a/index.qmd
+++ b/index.qmd
@@ -18,15 +18,15 @@ We would love to tell you a little bit about ourselves both when we were young a
 
 ### About the book 
 
-This children's book features a group of statistician and data scientists who identify as a woman. On each page of the book, one woman is featured with the left side of the page describing the individual when she was young and the right side of the page descriving the individual today. 
+This children's book features a group of statisticians and data scientists who identify as a woman. On each page of the book, one person is featured with the left side of the page describing the individual when she was young and the right side of the page describing the individual today. 
 
 ### Editors and illustrators of the book
 
 The book was edited by Stephanie Hicks and Jessica Crowell and illustrated by Jessica Crowell with an incredible amount of support from the [Super Women Team](about-authors.qmd). 
 
-- Jessica Crowell is a videographer and editor, trained at the Maryland Institute College of Art (MICA), and now in the department of Biostatistics at Johns Hopkins, where she works with faculty to record, edit, illustrate, all the video, audio, and text as part of work in the [Johns Hopkins Data Science Lab](https://jhudatascience.org). 
+- [Jessica Crowell](https://www.linkedin.com/in/jessica-crowell-b129b451/) is a videographer and editor, trained at the Maryland Institute College of Art (MICA), and now in the Department of Biostatistics at Johns Hopkins, where she works with faculty and staff to record, edit, illustrate, all the video, audio, and text as part of work in the [Johns Hopkins Data Science Lab](https://jhudatascience.org). 
 
-- [Stephanie Hicks](https://www.stephaniehicks.com/) is a [problem-forward](https://simplystatistics.org/posts/2013-05-29-what-statistics-should-do-about-big-data-problem-forward-not-solution-backward/) scientist who uses statistics and data science tools to solve real-world problems in the biomedical data sciences. She is passionate about contributing and supporting initiatives that promote justice, equity, diversity, and inclusion. 
+- [Stephanie Hicks](https://www.stephaniehicks.com/) is a [problem-forward](https://simplystatistics.org/posts/2013-05-29-what-statistics-should-do-about-big-data-problem-forward-not-solution-backward/) scientist who uses statistics and data science tools to solve real-world problems in the biomedical data sciences. She is passionate about contributing to and supporting initiatives that promote justice, equity, diversity, and inclusion. 
 
 
 ### Why this book? 
