--- a/index.qmd
+++ b/index.qmd
@@ -18,13 +18,13 @@ We would love to tell you a little bit about ourselves both when we were young a
 
 ### About the book 
 
-This children's book features a group of statisticians and data scientists who identify as a woman. On each page of the book, one person is featured with the left side of the page describing the individual when she was young and the right side of the page describing the individual today. 
+This children's book features a group of women statisticians and data scientists. On each page of the book, one person is featured with the left side of the page describing the individual when she was young and the right side of the page describing the individual today. 
 
 ### Editors and illustrators of the book
 
 The book was edited by Stephanie Hicks and Jessica Crowell and illustrated by Jessica Crowell with an incredible amount of support from the [Super Women Team](about-authors.qmd). 
 
-- [Jessica Crowell](https://www.linkedin.com/in/jessica-crowell-b129b451/) is a videographer and editor, trained at the Maryland Institute College of Art (MICA), and now in the Department of Biostatistics at Johns Hopkins, where she works with faculty and staff to record, edit, illustrate, all the video, audio, and text as part of work in the [Johns Hopkins Data Science Lab](https://jhudatascience.org). 
+- [Jessica Crowell](https://www.linkedin.com/in/jessica-crowell-b129b451/) is a videographer and editor, trained at the Maryland Institute College of Art (MICA), and now in the Department of Biostatistics at Johns Hopkins, where she works with faculty and staff on multimedia projects as part of work in the [Johns Hopkins Data Science Lab](https://jhudatascience.org). 
 
 - [Stephanie Hicks](https://www.stephaniehicks.com/) is a [problem-forward](https://simplystatistics.org/posts/2013-05-29-what-statistics-should-do-about-big-data-problem-forward-not-solution-backward/) scientist who uses statistics and data science tools to solve real-world problems in the biomedical data sciences. She is passionate about contributing to and supporting initiatives that promote justice, equity, diversity, and inclusion. 
 
@@ -41,10 +41,9 @@ We are in the process of working with the American Statistical Association to se
 
 ### License
 
-The illustrations in the book and website and narrative text in the book are licensed under the [CC-BY-NC-ND](https://creativecommons.org/licenses/by-nc-nd/4.0/) 4.0 license. This means that these specific parts of the book and website cannot be modified or remixed, if you use our materials.
+The illustrations in the book and website and narrative text in the book are licensed under the [CC BY-NC-ND](https://creativecommons.org/licenses/by-nc-nd/4.0/) 4.0 license. 
 
-Everything else in this project is licensed under the [CC-BY-NC-SA](https://creativecommons.org/licenses/by-nc-sa/4.0) 4.0 license. In summary, this means that you can adapt the material to suit your needs as long as you cite the original project and authors.
-
+Everything else in this project is licensed under the [CC BY-NC-SA](https://creativecommons.org/licenses/by-nc-sa/4.0) 4.0 license.
 
 
 ### Contact
