--- a/index.qmd
+++ b/index.qmd
@@ -5,7 +5,7 @@ title: "Hi there and welcome!"
 
 We are a group of Statisticians and Data Scientists! 
 
-'What are those', you say? Well, if you are anything like us, you've got lots of big questions, you like collect information or data about those questions, and you like to find patterns in the data to answer those questions to help make the world better -- like a super hero! 
+'What are those', you say? Well, if you are anything like us, you've got lots of big questions, you like to collect information or data about those questions, and you like to find patterns in the data to answer those questions to help make the world better -- like a super hero! 
 
 We would love to tell you a little bit about ourselves both when we were young and who we are now! 
 
